fixed row gap in blog

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -238,6 +238,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-area: 100%;
+  row-gap: 5em;
 }
 
 /* MEDIA QUERIES */
